--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div class="container">
-      <p></p>
-      <p></p>
+      <p>Akapit 1</p>
+      <p>Akapit 2</p>
     </div>
   </body>
 </html>
